tests/fixtures/compile_errors/call_address_with_wrong_type.fe
contract Foo:
    pub def foo():
        address(true)
